// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ControlPanel /> > renders with default desktop position and size 1`] = `
.emotion-0 {
  background-color: #4f555a;
  list-style: none;
  padding: 10px;
  margin: 0;
  max-width: 100%;
  display: grid;
  grid-template-columns: repeat(10,1fr);
  grid-template-rows: 1fr 1fr;
  gap: 10px 10px;
  grid-template-areas: 'play play quit quit drag drag resize resize rewind rewind' 'volume volume volume volume volume fastForward fastForward fastForward fastForward fastForward';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  gap: 10px;
}

.emotion-2 {
  display: contents;
}

.emotion-5 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: play;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-5 {
    width: auto;
  }
}

.emotion-5:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-5:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-5 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-10 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: quit;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-10 {
    width: auto;
  }
}

.emotion-10:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-10:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-10 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-15 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: drag;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-15 {
    width: auto;
  }
}

.emotion-15:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-15:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-15 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-20 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: resize;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-20 {
    width: auto;
  }
}

.emotion-20:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-20:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-20 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-25 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: rewind;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-25 {
    width: auto;
  }
}

.emotion-25:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-25:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-25 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-31 {
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: volume;
  max-height: 40px;
}

@media only screen and (min-width: 600px) {
  .emotion-31 {
    width: auto;
  }
}

.emotion-33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  --IconButton-hoverBg: rgba(0, 0, 0, 0.04);
  padding: 5px;
  font-size: 1.125rem;
  padding: 0px;
  color: #000;
}

.emotion-33::-moz-focus-inner {
  border-style: none;
}

.emotion-33.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-33 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-33:hover {
  background-color: var(--IconButton-hoverBg);
}

@media (hover: none) {
  .emotion-33:hover {
    background-color: transparent;
  }
}

.emotion-33.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-33.MuiIconButton-loading {
  color: transparent;
}

.emotion-33:active {
  color: #1c76fd;
}

.emotion-35 {
  border-radius: 12px;
  box-sizing: content-box;
  display: inline-block;
  position: relative;
  cursor: pointer;
  touch-action: none;
  -webkit-tap-highlight-color: transparent;
  color: #1976d2;
  height: 4px;
  width: 100%;
  padding: 13px 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 85px;
  margin: 0 10px;
  max-height: 40px;
}

@media print {
  .emotion-35 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-35.Mui-disabled {
  pointer-events: none;
  cursor: default;
  color: #bdbdbd;
}

.emotion-35.MuiSlider-dragging .MuiSlider-thumb,
.emotion-35.MuiSlider-dragging .MuiSlider-track {
  -webkit-transition: none;
  transition: none;
}

@media (pointer: coarse) {
  .emotion-35 {
    padding: 20px 0;
  }
}

.emotion-35>.MuiSlider-markActive {
  opacity: 1;
  background-color: currentColor;
}

.emotion-36 {
  display: block;
  position: absolute;
  border-radius: inherit;
  background-color: currentColor;
  opacity: 0.38;
  width: 100%;
  height: inherit;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-37 {
  display: block;
  position: absolute;
  border-radius: inherit;
  border: 1px solid currentColor;
  background-color: currentColor;
  -webkit-transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,width 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,width 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: inherit;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-38 {
  position: absolute;
  width: 2px;
  height: 2px;
  border-radius: 1px;
  background-color: currentColor;
  top: 50%;
  -webkit-transform: translate(-1px, -50%);
  -moz-transform: translate(-1px, -50%);
  -ms-transform: translate(-1px, -50%);
  transform: translate(-1px, -50%);
  background-color: #fff;
  opacity: 0.8;
}

.emotion-49 {
  position: absolute;
  width: 20px;
  height: 20px;
  box-sizing: border-box;
  border-radius: 50%;
  outline: 0;
  background-color: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transition: box-shadow 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.emotion-49::before {
  position: absolute;
  content: "";
  border-radius: inherit;
  width: 100%;
  height: 100%;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-49::after {
  position: absolute;
  content: "";
  border-radius: 50%;
  width: 42px;
  height: 42px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.emotion-49.Mui-disabled:hover {
  box-shadow: none;
}

.emotion-49:hover,
.emotion-49.Mui-focusVisible {
  box-shadow: 0px 0px 0px 8px rgba(25, 118, 210, 0.16);
}

@media (hover: none) {
  .emotion-49:hover,
  .emotion-49.Mui-focusVisible {
    box-shadow: none;
  }
}

.emotion-49.Mui-active {
  box-shadow: 0px 0px 0px 14px rgba(25, 118, 210, 0.16);
}

.emotion-50 {
  z-index: 1;
  white-space: nowrap;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  position: absolute;
  background-color: #757575;
  border-radius: 2px;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0.25rem 0.75rem;
  -webkit-transform: translateY(-100%) scale(0);
  -moz-transform: translateY(-100%) scale(0);
  -ms-transform: translateY(-100%) scale(0);
  transform: translateY(-100%) scale(0);
  top: -10px;
  transform-origin: bottom center;
}

.emotion-50::before {
  position: absolute;
  content: "";
  width: 8px;
  height: 8px;
  -webkit-transform: translate(-50%, 50%) rotate(45deg);
  -moz-transform: translate(-50%, 50%) rotate(45deg);
  -ms-transform: translate(-50%, 50%) rotate(45deg);
  transform: translate(-50%, 50%) rotate(45deg);
  background-color: inherit;
  bottom: 0;
  left: 50%;
}

.emotion-50.MuiSlider-valueLabelOpen {
  -webkit-transform: translateY(-100%) scale(1);
  -moz-transform: translateY(-100%) scale(1);
  -ms-transform: translateY(-100%) scale(1);
  transform: translateY(-100%) scale(1);
}

.emotion-56 {
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: fastForward;
  max-height: 40px;
}

@media only screen and (min-width: 600px) {
  .emotion-56 {
    width: auto;
  }
}

.emotion-64 {
  position: absolute;
  width: 2px;
  height: 2px;
  border-radius: 1px;
  background-color: currentColor;
  top: 50%;
  -webkit-transform: translate(-1px, -50%);
  -moz-transform: translate(-1px, -50%);
  -ms-transform: translate(-1px, -50%);
  transform: translate(-1px, -50%);
}

<div
  class="react-draggable"
  data-testid="control-panel-wrapper"
  id="_r_d_"
  style="position: absolute; user-select: auto; width: auto; height: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,10px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <ul
    class="emotion-0 emotion-1"
  >
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Play"
        class="emotion-4 emotion-5 emotion-6"
        id="_r_d_--play"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 6v12l10-6z"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Quit Game"
        class="emotion-4 emotion-10 emotion-6"
        id="_r_d_--quit-game"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 10h6c1.654 0 3 1.346 3 3s-1.346 3-3 3h-3v2h3c2.757 0 5-2.243 5-5s-2.243-5-5-5H9V5L4 9l5 4v-3z"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Drag Items"
        class="noDrag emotion-4 emotion-15 emotion-6"
        id="_r_d_--drag"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Resize Items"
        class="noDrag emotion-4 emotion-20 emotion-6"
        id="_r_d_--resize"
      >
        <svg
          fill="none"
          height="2em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 11v8a1 1 0 0 0 1 1h8m-9 -14v-1a1 1 0 0 1 1 -1h1m5 0h2m5 0h1a1 1 0 0 1 1 1v1m0 5v2m0 5v1a1 1 0 0 1 -1 1h-1"
          />
          <path
            d="M4 12h7a1 1 0 0 1 1 1v7"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Rewind Emulator"
        class="emotion-4 emotion-25 emotion-6"
        id="_r_d_--rewind"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          style="max-height: 100%;"
          viewBox="0 0 1024 1024"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M485.6 249.9L198.2 498c-8.3 7.1-8.3 20.8 0 27.9l287.4 248.2c10.7 9.2 26.4.9 26.4-14V263.8c0-14.8-15.7-23.2-26.4-13.9zm320 0L518.2 498a18.6 18.6 0 0 0-6.2 14c0 5.2 2.1 10.4 6.2 14l287.4 248.2c10.7 9.2 26.4.9 26.4-14V263.8c0-14.8-15.7-23.2-26.4-13.9z"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-2 emotion-30"
      >
        <div
          class="emotion-31 emotion-32"
          id="_r_d_--volume-slider"
        >
          <button
            aria-label="Mute Volume"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-33"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 24 24"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.707 20.293-2.023-2.023A9.566 9.566 0 0 0 21.999 12c0-4.091-2.472-7.453-5.999-9v2c2.387 1.386 3.999 4.047 3.999 7a8.113 8.113 0 0 1-1.672 4.913l-1.285-1.285C17.644 14.536 18 13.19 18 12c0-1.771-.775-3.9-2-5v7.586l-2-2V4a1 1 0 0 0-1.554-.832L7.727 6.313l-4.02-4.02-1.414 1.414 18 18 1.414-1.414zM12 5.868v4.718L9.169 7.755 12 5.868zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20v-1.879l-2-2v2.011l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9h.879L3.102 7.223A1.995 1.995 0 0 0 2 9v6c0 1.103.897 2 2 2z"
              />
            </svg>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium emotion-34 emotion-35"
          >
            <span
              class="MuiSlider-rail emotion-36"
            />
            <span
              class="MuiSlider-track emotion-37"
              style="left: 0%; width: 100%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="0"
              style="left: 0%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="1"
              style="left: 10%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="2"
              style="left: 20%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="3"
              style="left: 30.000000000000004%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="4"
              style="left: 40%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="5"
              style="left: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="6"
              style="left: 60.00000000000001%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="7"
              style="left: 70%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="8"
              style="left: 80%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="9"
              style="left: 90%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="10"
              style="left: 100%;"
            />
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary emotion-49"
              data-index="0"
              style="left: 100%;"
            >
              <input
                aria-label="Volume Slider"
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="0"
                aria-valuenow="1"
                data-index="0"
                max="1"
                min="0"
                step="0.1"
                style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="1"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel emotion-50"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    100
                  </span>
                </span>
              </span>
            </span>
          </span>
          <button
            aria-label="Max Volume"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-33"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 24 24"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21c3.527-1.547 5.999-4.909 5.999-9S19.527 4.547 16 3v2c2.387 1.386 3.999 4.047 3.999 7S18.387 17.614 16 19v2z"
              />
              <path
                d="M16 7v10c1.225-1.1 2-3.229 2-5s-.775-3.9-2-5zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20V4a1 1 0 0 0-1.554-.832L6.697 7H4c-1.103 0-2 .897-2 2v6c0 1.103.897 2 2 2zm0-8h3c.033 0 .061-.016.093-.019a1.027 1.027 0 0 0 .38-.116c.026-.015.057-.017.082-.033L12 5.868v12.264l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9z"
              />
            </svg>
          </button>
        </div>
      </span>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-2 emotion-30"
      >
        <div
          class="emotion-56 emotion-32"
          id="_r_d_--fast-forward"
        >
          <button
            aria-label="Regular Speed"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-33"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 1024 1024"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M825.8 498L538.4 249.9c-10.7-9.2-26.4-.9-26.4 14v496.3c0 14.9 15.7 23.2 26.4 14L825.8 526c8.3-7.2 8.3-20.8 0-28zm-320 0L218.4 249.9c-10.7-9.2-26.4-.9-26.4 14v496.3c0 14.9 15.7 23.2 26.4 14L505.8 526c4.1-3.6 6.2-8.8 6.2-14 0-5.2-2.1-10.4-6.2-14z"
              />
            </svg>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium emotion-34 emotion-35"
          >
            <span
              class="MuiSlider-rail emotion-36"
            />
            <span
              class="MuiSlider-track emotion-37"
              style="left: 0%; width: 0%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="0"
              style="left: 0%;"
            />
            <span
              class="MuiSlider-mark emotion-64"
              data-index="1"
              style="left: 25%;"
            />
            <span
              class="MuiSlider-mark emotion-64"
              data-index="2"
              style="left: 50%;"
            />
            <span
              class="MuiSlider-mark emotion-64"
              data-index="3"
              style="left: 75%;"
            />
            <span
              class="MuiSlider-mark emotion-64"
              data-index="4"
              style="left: 100%;"
            />
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary emotion-49"
              data-index="0"
              style="left: 0%;"
            >
              <input
                aria-label="Fast Forward/Slowdown Slider"
                aria-orientation="horizontal"
                aria-valuemax="8"
                aria-valuemin="4"
                aria-valuenow="4"
                data-index="0"
                max="8"
                min="4"
                step="1"
                style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="4"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel emotion-50"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    1x
                  </span>
                </span>
              </span>
            </span>
          </span>
          <button
            aria-label="Max Fast Forward"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-33"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 1024 1024"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M793.8 499.3L506.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.6c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8a16.14 16.14 0 0 0 0-25.4zm-320 0L186.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.5c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8c4.1-3.2 6.2-8 6.2-12.7 0-4.6-2.1-9.4-6.2-12.6zM857.6 248h-51.2c-3.5 0-6.4 2.7-6.4 6v516c0 3.3 2.9 6 6.4 6h51.2c3.5 0 6.4-2.7 6.4-6V254c0-3.3-2.9-6-6.4-6z"
              />
            </svg>
          </button>
        </div>
      </span>
    </li>
  </ul>
  <div />
</div>
`;

exports[`<ControlPanel /> > renders with default mobile position and size 1`] = `
.emotion-0 {
  background-color: #4f555a;
  list-style: none;
  padding: 10px;
  margin: 0;
  max-width: 100%;
  display: grid;
  grid-template-columns: repeat(10,1fr);
  grid-template-rows: 1fr 1fr;
  gap: 10px 10px;
  grid-template-areas: 'play play quit quit drag drag resize resize rewind rewind' 'volume volume volume volume volume fastForward fastForward fastForward fastForward fastForward';
}

.emotion-2 {
  display: contents;
}

.emotion-5 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: play;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-5 {
    width: auto;
  }
}

.emotion-5:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-5:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-5 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-10 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: quit;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-10 {
    width: auto;
  }
}

.emotion-10:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-10:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-10 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-15 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: drag;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-15 {
    width: auto;
  }
}

.emotion-15:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-15:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-15 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-20 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: resize;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-20 {
    width: auto;
  }
}

.emotion-20:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-20:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-20 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-25 {
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  padding: inherit;
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: rewind;
  border: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}

@media only screen and (min-width: 600px) {
  .emotion-25 {
    width: auto;
  }
}

.emotion-25:focus {
  box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
}

.emotion-25:active {
  color: #1c76fd;
}

@media only screen and (max-height: 450px) and (max-width: 1000px) and (orientation: landscape) {
  .emotion-25 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
    min-width: unset;
  }
}

.emotion-31 {
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: volume;
  max-height: 40px;
}

@media only screen and (min-width: 600px) {
  .emotion-31 {
    width: auto;
  }
}

.emotion-33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  --IconButton-hoverBg: rgba(0, 0, 0, 0.04);
  padding: 5px;
  font-size: 1.125rem;
  padding: 0px;
  color: #000;
}

.emotion-33::-moz-focus-inner {
  border-style: none;
}

.emotion-33.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-33 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-33:hover {
  background-color: var(--IconButton-hoverBg);
}

@media (hover: none) {
  .emotion-33:hover {
    background-color: transparent;
  }
}

.emotion-33.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-33.MuiIconButton-loading {
  color: transparent;
}

.emotion-33:active {
  color: #1c76fd;
}

.emotion-35 {
  border-radius: 12px;
  box-sizing: content-box;
  display: inline-block;
  position: relative;
  cursor: pointer;
  touch-action: none;
  -webkit-tap-highlight-color: transparent;
  color: #1976d2;
  height: 4px;
  width: 100%;
  padding: 13px 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  width: 85px;
  margin: 0 10px;
  max-height: 40px;
}

@media print {
  .emotion-35 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-35.Mui-disabled {
  pointer-events: none;
  cursor: default;
  color: #bdbdbd;
}

.emotion-35.MuiSlider-dragging .MuiSlider-thumb,
.emotion-35.MuiSlider-dragging .MuiSlider-track {
  -webkit-transition: none;
  transition: none;
}

@media (pointer: coarse) {
  .emotion-35 {
    padding: 20px 0;
  }
}

.emotion-35>.MuiSlider-markActive {
  opacity: 1;
  background-color: currentColor;
}

.emotion-36 {
  display: block;
  position: absolute;
  border-radius: inherit;
  background-color: currentColor;
  opacity: 0.38;
  width: 100%;
  height: inherit;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-37 {
  display: block;
  position: absolute;
  border-radius: inherit;
  border: 1px solid currentColor;
  background-color: currentColor;
  -webkit-transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,width 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,width 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: inherit;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-38 {
  position: absolute;
  width: 2px;
  height: 2px;
  border-radius: 1px;
  background-color: currentColor;
  top: 50%;
  -webkit-transform: translate(-1px, -50%);
  -moz-transform: translate(-1px, -50%);
  -ms-transform: translate(-1px, -50%);
  transform: translate(-1px, -50%);
  background-color: #fff;
  opacity: 0.8;
}

.emotion-49 {
  position: absolute;
  width: 20px;
  height: 20px;
  box-sizing: border-box;
  border-radius: 50%;
  outline: 0;
  background-color: currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transition: box-shadow 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,left 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,bottom 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.emotion-49::before {
  position: absolute;
  content: "";
  border-radius: inherit;
  width: 100%;
  height: 100%;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-49::after {
  position: absolute;
  content: "";
  border-radius: 50%;
  width: 42px;
  height: 42px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.emotion-49.Mui-disabled:hover {
  box-shadow: none;
}

.emotion-49:hover,
.emotion-49.Mui-focusVisible {
  box-shadow: 0px 0px 0px 8px rgba(25, 118, 210, 0.16);
}

@media (hover: none) {
  .emotion-49:hover,
  .emotion-49.Mui-focusVisible {
    box-shadow: none;
  }
}

.emotion-49.Mui-active {
  box-shadow: 0px 0px 0px 14px rgba(25, 118, 210, 0.16);
}

.emotion-50 {
  z-index: 1;
  white-space: nowrap;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  -webkit-transition: -webkit-transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  position: absolute;
  background-color: #757575;
  border-radius: 2px;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0.25rem 0.75rem;
  -webkit-transform: translateY(-100%) scale(0);
  -moz-transform: translateY(-100%) scale(0);
  -ms-transform: translateY(-100%) scale(0);
  transform: translateY(-100%) scale(0);
  top: -10px;
  transform-origin: bottom center;
}

.emotion-50::before {
  position: absolute;
  content: "";
  width: 8px;
  height: 8px;
  -webkit-transform: translate(-50%, 50%) rotate(45deg);
  -moz-transform: translate(-50%, 50%) rotate(45deg);
  -ms-transform: translate(-50%, 50%) rotate(45deg);
  transform: translate(-50%, 50%) rotate(45deg);
  background-color: inherit;
  bottom: 0;
  left: 50%;
}

.emotion-50.MuiSlider-valueLabelOpen {
  -webkit-transform: translateY(-100%) scale(1);
  -moz-transform: translateY(-100%) scale(1);
  -ms-transform: translateY(-100%) scale(1);
  transform: translateY(-100%) scale(1);
}

.emotion-56 {
  cursor: pointer;
  background-color: #a9a9a9;
  border-radius: 0.25rem;
  min-width: 40px;
  min-height: 40px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #000;
  width: 100%;
  grid-area: fastForward;
  max-height: 40px;
}

@media only screen and (min-width: 600px) {
  .emotion-56 {
    width: auto;
  }
}

.emotion-64 {
  position: absolute;
  width: 2px;
  height: 2px;
  border-radius: 1px;
  background-color: currentColor;
  top: 50%;
  -webkit-transform: translate(-1px, -50%);
  -moz-transform: translate(-1px, -50%);
  -ms-transform: translate(-1px, -50%);
  transform: translate(-1px, -50%);
}

<div
  class="react-draggable"
  data-testid="control-panel-wrapper"
  id="_r_7_"
  style="position: absolute; user-select: auto; width: 100dvw; height: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,0px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <ul
    class="emotion-0 emotion-1"
  >
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Play"
        class="emotion-4 emotion-5 emotion-6"
        id="_r_7_--play"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 6v12l10-6z"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Quit Game"
        class="emotion-4 emotion-10 emotion-6"
        id="_r_7_--quit-game"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 10h6c1.654 0 3 1.346 3 3s-1.346 3-3 3h-3v2h3c2.757 0 5-2.243 5-5s-2.243-5-5-5H9V5L4 9l5 4v-3z"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Drag Items"
        class="noDrag emotion-4 emotion-15 emotion-6"
        id="_r_7_--drag"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Resize Items"
        class="noDrag emotion-4 emotion-20 emotion-6"
        id="_r_7_--resize"
      >
        <svg
          fill="none"
          height="2em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 11v8a1 1 0 0 0 1 1h8m-9 -14v-1a1 1 0 0 1 1 -1h1m5 0h2m5 0h1a1 1 0 0 1 1 1v1m0 5v2m0 5v1a1 1 0 0 1 -1 1h-1"
          />
          <path
            d="M4 12h7a1 1 0 0 1 1 1v7"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <button
        aria-label="Rewind Emulator"
        class="emotion-4 emotion-25 emotion-6"
        id="_r_7_--rewind"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          style="max-height: 100%;"
          viewBox="0 0 1024 1024"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M485.6 249.9L198.2 498c-8.3 7.1-8.3 20.8 0 27.9l287.4 248.2c10.7 9.2 26.4.9 26.4-14V263.8c0-14.8-15.7-23.2-26.4-13.9zm320 0L518.2 498a18.6 18.6 0 0 0-6.2 14c0 5.2 2.1 10.4 6.2 14l287.4 248.2c10.7 9.2 26.4.9 26.4-14V263.8c0-14.8-15.7-23.2-26.4-13.9z"
          />
        </svg>
      </button>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-2 emotion-30"
      >
        <div
          class="emotion-31 emotion-32"
          id="_r_7_--volume-slider"
        >
          <button
            aria-label="Mute Volume"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-33"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 24 24"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.707 20.293-2.023-2.023A9.566 9.566 0 0 0 21.999 12c0-4.091-2.472-7.453-5.999-9v2c2.387 1.386 3.999 4.047 3.999 7a8.113 8.113 0 0 1-1.672 4.913l-1.285-1.285C17.644 14.536 18 13.19 18 12c0-1.771-.775-3.9-2-5v7.586l-2-2V4a1 1 0 0 0-1.554-.832L7.727 6.313l-4.02-4.02-1.414 1.414 18 18 1.414-1.414zM12 5.868v4.718L9.169 7.755 12 5.868zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20v-1.879l-2-2v2.011l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9h.879L3.102 7.223A1.995 1.995 0 0 0 2 9v6c0 1.103.897 2 2 2z"
              />
            </svg>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium emotion-34 emotion-35"
          >
            <span
              class="MuiSlider-rail emotion-36"
            />
            <span
              class="MuiSlider-track emotion-37"
              style="left: 0%; width: 100%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="0"
              style="left: 0%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="1"
              style="left: 10%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="2"
              style="left: 20%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="3"
              style="left: 30.000000000000004%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="4"
              style="left: 40%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="5"
              style="left: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="6"
              style="left: 60.00000000000001%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="7"
              style="left: 70%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="8"
              style="left: 80%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="9"
              style="left: 90%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="10"
              style="left: 100%;"
            />
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary emotion-49"
              data-index="0"
              style="left: 100%;"
            >
              <input
                aria-label="Volume Slider"
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="0"
                aria-valuenow="1"
                data-index="0"
                max="1"
                min="0"
                step="0.1"
                style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="1"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel emotion-50"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    100
                  </span>
                </span>
              </span>
            </span>
          </span>
          <button
            aria-label="Max Volume"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-33"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 24 24"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21c3.527-1.547 5.999-4.909 5.999-9S19.527 4.547 16 3v2c2.387 1.386 3.999 4.047 3.999 7S18.387 17.614 16 19v2z"
              />
              <path
                d="M16 7v10c1.225-1.1 2-3.229 2-5s-.775-3.9-2-5zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20V4a1 1 0 0 0-1.554-.832L6.697 7H4c-1.103 0-2 .897-2 2v6c0 1.103.897 2 2 2zm0-8h3c.033 0 .061-.016.093-.019a1.027 1.027 0 0 0 .38-.116c.026-.015.057-.017.082-.033L12 5.868v12.264l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9z"
              />
            </svg>
          </button>
        </div>
      </span>
    </li>
    <li
      class="emotion-2 emotion-3"
    >
      <span
        class="emotion-2 emotion-30"
      >
        <div
          class="emotion-56 emotion-32"
          id="_r_7_--fast-forward"
        >
          <button
            aria-label="Regular Speed"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-33"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 1024 1024"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M825.8 498L538.4 249.9c-10.7-9.2-26.4-.9-26.4 14v496.3c0 14.9 15.7 23.2 26.4 14L825.8 526c8.3-7.2 8.3-20.8 0-28zm-320 0L218.4 249.9c-10.7-9.2-26.4-.9-26.4 14v496.3c0 14.9 15.7 23.2 26.4 14L505.8 526c4.1-3.6 6.2-8.8 6.2-14 0-5.2-2.1-10.4-6.2-14z"
              />
            </svg>
          </button>
          <span
            class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium emotion-34 emotion-35"
          >
            <span
              class="MuiSlider-rail emotion-36"
            />
            <span
              class="MuiSlider-track emotion-37"
              style="left: 0%; width: 0%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive emotion-38"
              data-index="0"
              style="left: 0%;"
            />
            <span
              class="MuiSlider-mark emotion-64"
              data-index="1"
              style="left: 25%;"
            />
            <span
              class="MuiSlider-mark emotion-64"
              data-index="2"
              style="left: 50%;"
            />
            <span
              class="MuiSlider-mark emotion-64"
              data-index="3"
              style="left: 75%;"
            />
            <span
              class="MuiSlider-mark emotion-64"
              data-index="4"
              style="left: 100%;"
            />
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary emotion-49"
              data-index="0"
              style="left: 0%;"
            >
              <input
                aria-label="Fast Forward/Slowdown Slider"
                aria-orientation="horizontal"
                aria-valuemax="8"
                aria-valuemin="4"
                aria-valuenow="4"
                data-index="0"
                max="8"
                min="4"
                step="1"
                style="border: 0px; clip: rect(0px); height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="4"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel emotion-50"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    1x
                  </span>
                </span>
              </span>
            </span>
          </span>
          <button
            aria-label="Max Fast Forward"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall emotion-33"
            tabindex="0"
            type="button"
          >
            <svg
              fill="currentColor"
              height="2em"
              stroke="currentColor"
              stroke-width="0"
              style="max-height: 100%;"
              viewBox="0 0 1024 1024"
              width="2em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M793.8 499.3L506.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.6c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8a16.14 16.14 0 0 0 0-25.4zm-320 0L186.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.5c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8c4.1-3.2 6.2-8 6.2-12.7 0-4.6-2.1-9.4-6.2-12.6zM857.6 248h-51.2c-3.5 0-6.4 2.7-6.4 6v516c0 3.3 2.9 6 6.4 6h51.2c3.5 0 6.4-2.7 6.4-6V254c0-3.3-2.9-6-6.4-6z"
              />
            </svg>
          </button>
        </div>
      </span>
    </li>
  </ul>
  <div />
</div>
`;
